--- a/styles.scss
+++ b/styles.scss
@@ -16,9 +16,27 @@ $nunitoFont: "Nunito", sans-serif;
   align-items: center;
 }
 
+html,
+body {
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: $black;
   font-family: $nunitoFont !important;
+}
+
+.styler {
+  position: absolute;
+  padding: 0px;
+  font-size: 10rem;
+  margin-left: 20px;
+  bottom: 40%;
+  color: $orange-web;
 }
 
 header {
@@ -41,7 +59,7 @@ header {
     }
   }
   s & > .header-date {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
 
     & > mark {
       background-color: $oxford-blue;
@@ -51,6 +69,7 @@ header {
 }
 
 main {
+  background-color: $black;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 2fr 1fr;
@@ -60,6 +79,8 @@ main {
   }
 
   & > section#current-ctn {
+    background-color: $black;
+
     grid-row: 1;
     grid-column: 1;
 
@@ -106,6 +127,8 @@ main {
     }
   }
   & > section#weather-img-ctn {
+    background-color: $black;
+
     grid-row: 1;
     grid-column: 2;
     @extend %flexer-extender;
@@ -118,6 +141,8 @@ main {
     }
   }
   & > section#week-ctn {
+    background-color: $black;
+
     grid-row: 1;
     grid-column: 3;
 
@@ -150,7 +175,7 @@ main {
     }
   }
   & > section#days-ctn {
-    // background-color: $oxford-blue;
+    background-color: $black;
     grid-row: 2;
     grid-column: 1 / -1;
     display: grid;
